--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,25 @@
 <resources>
     <string name="app_name">LearnPlaid</string>
+
+    <string name="no_comments">No comments</string>
+    <string name="logged_in_as">Logged in as</string>
+    <string name="comment">Comment</string>
+    <string name="hint_reply">Reply</string>
+    <string name="share">share</string>
+
+    <!-- main screen -->
+    <string name="search">Search</string>
+    <string name="theme">Toggle Theme</string>
+    <string name="filter">Filter</string>
+    <string name="about">About</string>
+    <string name="designer_news_login">Log in to Designer News</string>
+    <string name="designer_news_log_out">Log out of Designer News</string>
+    <string name="designer_news_logged_out">Logged out of Designer News</string>
+    <string name="add">Add</string>
+    <string name="edit">Edit</string>
+    <string name="no_filters_selected">No filters selected, press the filter button above (<annotation src="@drawable/ic_filter_small">&#2228;</annotation>)\n<i><annotation foregroundColor="@color/text_secondary_light">or swipe from the&#160;right</annotation></i></string>
+
+    <!--searchable label-->
+    <string name="search_hint">Search Dribbble &amp; Designer News</string>
+
 </resources>
